<resources>
    <string name="app_name">AndroidApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_overview">Overview</string>
    <string name="welcome">Welcome to the foxpicapp!!</string>
    <string name="add_foxpic">Add New Foxpic</string>
</resources>