...
            elevation = CardDefaults.cardElevation(defaultElevation = 4.dp)
        ) {
            Column {
                TextField(
                    value = naamPic,
                    onValueChange = { naam -> naamPic = naam },
                    label = { Text(text = "How would you like to name the pic?") }
                )
                Row(
                    modifier = Modifier
                        .fillMaxWidth(),
                    horizontalArrangement = Arrangement.Center
                ) {
...
                            containerColor = OrangeFox,
                            contentColor = Color.Black
                        ),
                        onClick = { onConfim(naamPic) },
                        modifier = Modifier.padding(8.dp)
                    ) {
                        Text("Confirm")
                    }
                    TextButton(
                        colors = ButtonDefaults.buttonColors(
                            containerColor = Color.Gray,
                            contentColor = Color.White
                        ),
...
